--- a/A2/Makefile.txt
+++ b/A2/Makefile.txt
@@ -5,10 +5,10 @@ CXX = u++					# compiler
 CXXFLAGS = -g -Wall -Wno-unused-label -MMD -DTYPE="${TYPE}" -DSENTINEL="${SENTINEL}"
 MAKEFILE_NAME = ${firstword ${MAKEFILE_LIST}}	# makefile name
 
-OBJECTS1 = # object files forming 1st executable with prefix "q1"
+OBJECTS1 = q1binsertsort.o # object files forming 1st executable with prefix "q1"
 EXEC1 = binsertsort
 
-OBJECTS2 = # object files forming 2st executable with prefix "q2"
+OBJECTS2 = q2hotpotato.o # object files forming 2st executable with prefix "q2"
 EXEC2 = hotpotato
 
 OBJECTS = ${OBJECTS1} ${OBJECTS2}		# all object files
