test command line arguments A3Q2

--- a/A3/Makefile
+++ b/A3/Makefile
@@ -3,7 +3,7 @@ KIND:=NOBUSY
 OPT:= # -multi -O2
 
 CXX = u++					# compiler
-CXXFLAGS = -O2 -g -Wall -Wno-unused-label ${OPT} -MMD -std=c++11 \
+CXXFLAGS = -g -Wall -Wno-unused-label ${OPT} -MMD -std=c++11 \
 		-DSENTINEL=${SENTINEL} -D${KIND}# compiler flags
 MAKEFILE_NAME = ${firstword ${MAKEFILE_LIST}}	# makefile name
 
@@ -13,7 +13,7 @@ EXEC01 = staticexits				# 0th executable name
 OBJECTS1 = q1.o
 EXEC1 = nostaticexits				# 1st executable name
 
-OBJECTS2 = # object files forming 2nd executable with prefix "q2"
+OBJECTS2 = q2.o # object files forming 2nd executable with prefix "q2"
 EXEC2 = matrixmultiply				# 2nd executable name
 
 OBJECTS3 = # object files forming 3rd executable with prefix "q3"
