--- a/A3/Makefile
+++ b/A3/Makefile
@@ -1,6 +1,7 @@
 SENTINEL:=-1
 KIND:=NOBUSY
-# OUTPUT:=DEBUGOUTPUT
+OUTPUT:=DEBUGOUTPUT
+OUTPUT:=NOOUTPUT
 OPT:= # -multi -O2
 
 CXX = u++ # compiler
