--- a/A4/Makefile
+++ b/A4/Makefile
@@ -2,13 +2,14 @@ KIND:=STACK
 TYPE:=MC
 
 CXX =u++# compiler
-CXXFLAGS =-g -multi -Wall -Wno-unused-label -MMD -O2 -DIMPLKIND_${KIND} -DIMPLTYPE_${TYPE}
+CXXFLAGS =-g -multi -nodebug -Wall -Wno-unused-label -MMD -O2 -DIMPLKIND_${KIND} -DIMPLTYPE_${TYPE}
 MAKEFILE_NAME = ${firstword ${MAKEFILE_LIST}}	# makefile name
 
 OBJECTS01 = q1new.o				# optional build of given program
 EXEC01 = new
 
-OBJECTS2 = q2tallyVotes${TYPE}.o # list of object files for question 1 prefixed with "q2"
+OBJECTS2 = #q2tallyVotes${TYPE}.o # list of object files for question 1 prefixed with "q2"
+
 EXEC2 = vote
 
 OBJECTS = ${OBJECTS2}				# all object files
