--- a/A4/Makefile
+++ b/A4/Makefile
@@ -8,7 +8,7 @@ MAKEFILE_NAME = ${firstword ${MAKEFILE_LIST}}	# makefile name
 OBJECTS01 = q1.o # optional build of given program
 EXEC01 = new
 
-OBJECTS2 = q2TallyVotes.o q2TallyVotes${TYPE}.o # list of object files for question 1 prefixed with "q2"
+OBJECTS2 = q2tallyVotes.o q2tallyVotes${TYPE}.o # list of object files for question 1 prefixed with "q2"
 
 EXEC2 = vote
 
