--- a/A5/Makefile
+++ b/A5/Makefile
@@ -3,16 +3,16 @@ CC = u++
 KIND = NPAD
 
 # compiler flags:
-CFLAGS  = -O2 -multi -nodebug -D${KIND}
+CFLAGS  = -O2 -multi -nodebug -D$(KIND)
 
 # the build target executable:
 TARGET = q1
-EXEC = c${KIND}
+EXEC = c$(KIND)
 
-all: ${TARGET}
+all: $(TARGET)
 
-${TARGET} : ${TARGET}.c
-	${CC} ${CFLAGS} -o ${TARGET} ${TARGET}.c
+$(TARGET): $(TARGET).c
+	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
 
 clean:
-	${RM} ${TARGET}
+	$(RM) $(TARGET)
