--- a/A5/Makefile
+++ b/A5/Makefile
@@ -11,7 +11,7 @@ EXEC = c$(KIND)
 
 all: $(TARGET)
 
-$(TARGET) : $(TARGET).c
+$(TARGET) : $(TARGET).cc
 	$(CC) $(CFLAGS) -o $(EXEC) $(TARGET).cc
 
 clean:
